# chatbot

./: .gitignore  .gitmodules  Dockerfile  README.md  compose-openwebui.yaml  main.py  package.json  pnpm-lock.yaml  prompt.txt  pyproject.toml  pytest.ini  requirements-minimum.txt  requirements.txt
.github/workflows/: deploy-pipelines.yml  deploy.yml  python-app.yml
.next/: app-build-manifest.json  trace
.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @babel+runtime@7.24.7.js  @floating-ui+core@1.6.2.js  @floating-ui+dom@1.6.5.js  @floating-ui+react-dom@2.1.0_react-dom@18.0.0_react@18.0.0.js  @floating-ui+utils@0.2.2.js  @radix-ui+primitive@1.0.1.js  @radix-ui+react-arrow@1.0.3_@types+react-dom@18.0.0_@types+react@18.0.0_react-dom@18.0.0_react@18.0.0.js  @radix-ui+react-collection@1.0.3_@types+react-dom@18.0.0_@types+react@18.0.0_react-dom@18.0.0_react@18.0.0.js  @radix-ui+react-compose-refs@1.0.1_@types+react@18.0.0_react@18.0.0.js  @swc+helpers@0.5.2.js  (+119 more)
pipelines/: armms.py  webui.db
scripts/: configure_weaviate.py
src/app/: layout.tsx  page.tsx
src/components/: ExperimentSelector.tsx  Providers.tsx  button-scroll-to-bottom.tsx  markdown.tsx
src/types/: chat.ts  condition.ts  message.ts
src/webui_pipeline/: Dockerfile  __init__.py  requirements-minimum.txt  requirements.txt
tests/: .coverage  __init__.py  coverage.lcov  test_pipeline.py
(+50 files in other folders)
